--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
     <string name="menu_home">Home</string>
     <string name="menu_make_payment">Make Payment</string>
     <string name="menu_verify_payment">Verify Payment</string>
@@ -57,13 +60,22 @@
     <string name="custom_confirm_button">Confirm</string>
     <string name="copy">Copy</string>
     <string name="copy_instruction">Copy this code for verficiation</string>
+    <string name="department_select">Select Department</string>
+    <string name="level_select">Select Level</string>
 
 
     <string-array name="departments">
         <item>Accounting</item>
-        <item>Computer Science</item>
+        <item>ComputerScience</item>
         <item>Economics</item>
-        <item>Mass Communication</item>
+        <item>MassCommunication</item>
+    </string-array>
+
+    <string-array name="levels">
+        <item>100L</item>
+        <item>200L</item>
+        <item>300L</item>
+        <item>400L</item>
     </string-array>
 
 
